--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i|Inter:100,200,300,400,500,600,700,800,900">
     <meta property="og:title" content="MeNaCa Software">
     <meta property="og:description" content="MeNaCa Website. Mobile Apps and more...">
-    <meta property="og:image" content="http://menaca.cf/images/92841e30-a5df-4d06-93ab-f2c4e555c218.png">
+    <meta property="og:image" content="http://menaca.cf/https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/92841e30-a5df-4d06-93ab-f2c4e555c218.png">
     <meta property="og:url" content="http://menaca.cf/">
     <link rel="canonical" href="menaca.cf › Home Page">
   </head>
   <body class="u-body u-overlap u-xl-mode" data-lang="tr">
     <header class="u-clearfix u-header u-header" id="sec-a733"><div class="u-clearfix u-sheet u-sheet-1">
         <a class="u-image u-logo u-image-1" data-image-width="784" data-image-height="616">
-          <img src="images/gri.png" class="u-logo-image u-logo-image-1">
+          <img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/gri.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="SM">
           <div class="menu-collapse u-custom-font" style="font-size: 1rem; letter-spacing: 0px; font-family: Inter; font-weight: 900;">
@@ -57,21 +57,21 @@
           </div>
         </nav>
         <div class="u-hidden-xs u-hover-feature u-social-icons u-spacing-10 u-social-icons-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
-          <a class="u-social-url" title="linkedin" target="_blank" href="https://www.linkedin.com/in/menacacf/"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-text-white u-icon-1"><img src="images/3128219-bf72544f.png" alt=""></span>
+          <a class="u-social-url" title="linkedin" target="_blank" href="https://www.linkedin.com/in/menacacf/"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-text-white u-icon-1"><img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/3128219-bf72544f.png" alt=""></span>
           </a>
-          <a class="u-social-url" title="twitter" target="_blank" href="https://twitter.com/realmenaca"><span class="u-file-icon u-icon u-social-icon u-social-twitter u-text-white u-icon-2"><img src="images/3128212-32edf67c.png" alt=""></span>
+          <a class="u-social-url" title="twitter" target="_blank" href="https://twitter.com/realmenaca"><span class="u-file-icon u-icon u-social-icon u-social-twitter u-text-white u-icon-2"><img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/3128212-32edf67c.png" alt=""></span>
           </a>
-          <a class="u-social-url" target="_blank" data-type="Custom" title="github" href="https://github.com/menaca"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-white u-icon-3"><img src="images/2111432-6a15f91c.png" alt=""></span>
+          <a class="u-social-url" target="_blank" data-type="Custom" title="github" href="https://github.com/menaca"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-white u-icon-3"><img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/2111432-6a15f91c.png" alt=""></span>
           </a>
-          <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/realmenaca"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-text-white u-icon-4"><img src="images/87390-4c4e429f.png" alt=""></span>
+          <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/realmenaca"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-text-white u-icon-4"><img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/87390-4c4e429f.png" alt=""></span>
           </a>
-          <a class="u-social-url" target="_blank" data-type="Custom" title="steam" href="https://steamcommunity.com/id/MeNa_Ca/"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-white u-icon-5"><img src="images/2111693-771c9d11.png" alt=""></span>
+          <a class="u-social-url" target="_blank" data-type="Custom" title="steam" href="https://steamcommunity.com/id/MeNa_Ca/"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-white u-icon-5"><img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/2111693-771c9d11.png" alt=""></span>
           </a>
         </div>
       </div></header>
     <section class="u-clearfix u-custom-color-1 u-section-1" id="sec-ea92">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/indir.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="2000" data-animation-delay="1000">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/indir.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="2000" data-animation-delay="1000">
         <h1 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">Welco​me to</h1>
         <h1 class="u-custom-font u-text u-text-default u-text-2">MeNaCa's Website</h1>
         <h1 class="u-custom-font u-text u-text-grey-15 u-text-3">Hello! I am Mehmet Nazım. I love coding and I coding Mobile Apps, Websites, Discord Bots, Python Projects etc. I am constantly learning, I love to learn.</h1>
@@ -80,7 +80,7 @@
     </section>
     <section class="u-clearfix u-custom-color-1 u-section-2" id="sec-1b9a">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/indir3.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/indir3.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250">
         <h1 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">#1</h1>
         <h1 class="u-custom-font u-text u-text-default u-text-2">MeNaSave</h1>
         <h1 class="u-custom-font u-text u-text-grey-15 u-text-3"> Download videos from youtube instagram..</h1>
@@ -89,7 +89,7 @@
     </section>
     <section class="u-clearfix u-custom-color-1 u-section-3" id="carousel_4aa4">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/indir6.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250">
+        <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/indir6.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250">
         <h1 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">#2</h1>
         <h1 class="u-custom-font u-text u-text-default u-text-2">Kargo Takip</h1>
         <h1 class="u-custom-font u-text u-text-grey-15 u-text-3"> All cargoes in one application</h1>
@@ -98,7 +98,7 @@
     </section>
     <section class="u-clearfix u-custom-color-1 u-section-4" id="carousel_052b">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/indir1.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/indir1.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250">
         <h1 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">#3</h1>
         <h1 class="u-custom-font u-text u-text-default u-text-2">MeNaRant</h1>
         <h1 class="u-custom-font u-text u-text-grey-15 u-text-3"> Valorant guide</h1>
@@ -107,7 +107,7 @@
     </section>
     <section class="u-clearfix u-custom-color-1 u-section-5" id="carousel_936a">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/indir2.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/indir2.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250">
         <h1 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">#4</h1>
         <h1 class="u-custom-font u-text u-text-default u-text-2">MeNaQuiz</h1>
         <h1 class="u-custom-font u-text u-text-grey-15 u-text-3"> A social media app</h1>
@@ -116,11 +116,11 @@
     </section>
     <section class="u-clearfix u-custom-color-1 u-section-6" id="carousel_5631">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/Balksz-11.png" alt="" data-image-width="1144" data-image-height="767" data-animation-name="customAnimationIn" data-animation-duration="750" data-animation-delay="0">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/Balksz-11.png" alt="" data-image-width="1144" data-image-height="767" data-animation-name="customAnimationIn" data-animation-duration="750" data-animation-delay="0">
         <h1 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">Discord Bot</h1>
         <h1 class="u-custom-font u-text u-text-default u-text-2">M​eNaBot</h1>
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-2" src="images/Balksz-1.png" alt="" data-image-width="1144" data-image-height="767" data-animation-name="customAnimationIn" data-animation-duration="750" data-animation-delay="0">
-        <img class="u-expanded-width-md u-image u-image-contain u-image-default u-image-3" src="images/Balksz-12.png" alt="" data-image-width="1144" data-image-height="767" data-animation-name="customAnimationIn" data-animation-duration="750" data-animation-delay="0">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-2" src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/Balksz-1.png" alt="" data-image-width="1144" data-image-height="767" data-animation-name="customAnimationIn" data-animation-duration="750" data-animation-delay="0">
+        <img class="u-expanded-width-md u-image u-image-contain u-image-default u-image-3" src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/Balksz-12.png" alt="" data-image-width="1144" data-image-height="767" data-animation-name="customAnimationIn" data-animation-duration="750" data-animation-delay="0">
       </div>
     </section>
     <section class="u-align-center u-clearfix u-image u-shading u-section-7" id="sec-b87e" data-image-width="864" data-image-height="864">
@@ -136,15 +136,15 @@
         <h2 class="u-custom-font u-text u-text-custom-color-2 u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="500"> Mehmet Nazım Çakar</h2>
         <div class="u-border-5 u-border-palette-2-base u-image u-image-circle u-preserve-proportions u-image-1" alt="" data-image-width="485" data-image-height="485" data-animation-name="customAnimationIn" data-animation-duration="1000"></div>
         <div class="u-hover-feature u-social-icons u-spacing-10 u-social-icons-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
-          <a class="u-social-url" title="linkedin" target="_blank" href="https://www.linkedin.com/in/menacacf/"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-text-white u-icon-1"><img src="images/3128219-bf72544f.png" alt=""></span>
+          <a class="u-social-url" title="linkedin" target="_blank" href="https://www.linkedin.com/in/menacacf/"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-text-white u-icon-1"><img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/3128219-bf72544f.png" alt=""></span>
           </a>
-          <a class="u-social-url" title="twitter" target="_blank" href="https://twitter.com/realmenaca"><span class="u-file-icon u-icon u-social-icon u-social-twitter u-text-white u-icon-2"><img src="images/3128212-32edf67c.png" alt=""></span>
+          <a class="u-social-url" title="twitter" target="_blank" href="https://twitter.com/realmenaca"><span class="u-file-icon u-icon u-social-icon u-social-twitter u-text-white u-icon-2"><img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/3128212-32edf67c.png" alt=""></span>
           </a>
-          <a class="u-social-url" target="_blank" data-type="Custom" title="github" href="https://github.com/menaca"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-white u-icon-3"><img src="images/2111432-6a15f91c.png" alt=""></span>
+          <a class="u-social-url" target="_blank" data-type="Custom" title="github" href="https://github.com/menaca"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-white u-icon-3"><img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/2111432-6a15f91c.png" alt=""></span>
           </a>
-          <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/realmenaca"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-text-white u-icon-4"><img src="images/87390-4c4e429f.png" alt=""></span>
+          <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/realmenaca"><span class="u-file-icon u-icon u-social-icon u-social-instagram u-text-white u-icon-4"><img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/87390-4c4e429f.png" alt=""></span>
           </a>
-          <a class="u-social-url" target="_blank" data-type="Custom" title="steam" href="https://steamcommunity.com/id/MeNa_Ca/"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-white u-icon-5"><img src="images/2111693-771c9d11.png" alt=""></span>
+          <a class="u-social-url" target="_blank" data-type="Custom" title="steam" href="https://steamcommunity.com/id/MeNa_Ca/"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-white u-icon-5"><img src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/2111693-771c9d11.png" alt=""></span>
           </a>
         </div>
         <h1 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-3">Send Mail</h1>
