--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="utf-8">
     <meta name="keywords" content="MeNaCa, MeNaCa Software, Mehmet Nazım Çakar, Mehmet, Nazım, Mehmet Nazım, MeNaCa Mobile App, Mobile App, mehmet nazım, menaca.cf">
     <meta name="description" content="MeNaCa Website. ">
-    <title>MeNaCa's HomePage</title>
+    <title>MeNaCa</title>
     <link rel="icon" href="icon.ico" type="image/x-icon" />
 
     <!-- homescreen web icon-name & hide safari ui -->    
-    <link rel="apple-touch-icon" href="icon.ico">  
+    <link rel="apple-touch-icon" href="images/icon/icon.ico">  
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="menaca.cf">
     
-    <link rel="stylesheet" href="main.css" media="screen">
-    <link rel="stylesheet" href="index.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="index.js" defer=""></script>
+    <link rel="stylesheet" href="styles/main.css" media="screen">
+    <link rel="stylesheet" href="styles/index.css" media="screen">
+    <script class="u-script" type="text/javascript" src="scripts/jquery-1.9.1.min.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="scripts/index.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i|Inter:100,200,300,400,500,600,700,800,900">
     <meta property="og:title" content="MeNaCa Software">
     <meta property="og:description" content="MeNaCa Website. Mobile Apps and more...">
-    <meta property="og:image" content="http://menaca.cf/https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/92841e30-a5df-4d06-93ab-f2c4e555c218.png">
+    <meta property="og:image" content="">
     <meta property="og:url" content="http://menaca.cf/">
-    <link rel="canonical" href="menaca.cf › Home Page">
+    <link rel="canonical" href="menaca.cf">
   </head>
   <body class="u-body u-overlap u-xl-mode" data-lang="tr">
     <header class="u-clearfix u-header u-header" id="sec-a733"><div class="u-clearfix u-sheet u-sheet-1">
