--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="MeNaCa, MeNaCa Software, Mehmet Nazım Çakar, Mehmet, Nazım, Mehmet Nazım, MeNaCa Mobile App, Mobile App, mehmet nazım, menaca.cf">
     <meta name="description" content="MeNaCa Website. ">
     <title>MeNaCa</title>
-    <link rel="icon" href="icon.ico" type="image/x-icon" />
+    <link rel="icon" href="images/icon/icon.ico" type="image/x-icon" />
 
     <!-- homescreen web icon-name & hide safari ui -->    
     <link rel="apple-touch-icon" href="images/icon/icon.ico">  
@@ -89,7 +89,7 @@
     </section>
     <section class="u-clearfix u-custom-color-1 u-section-3" id="carousel_4aa4">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/indir6.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250">
+        <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/cargo.png" alt="" data-image-width="763" data-image-height="1080" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250">
         <h1 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">#2</h1>
         <h1 class="u-custom-font u-text u-text-default u-text-2">Kargo Takip</h1>
         <h1 class="u-custom-font u-text u-text-grey-15 u-text-3"> All cargoes in one application</h1>
