--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="keywords" content="MeNaCa, MeNaCa Software, Mehmet Nazım Çakar, Mehmet, Nazım, Mehmet Nazım, MeNaCa Mobile App, Mobile App, mehmet nazım, menaca.cf">
     <meta name="description" content="MeNaCa Website. ">
     <title>MeNaCa</title>
-    <link rel="icon" href="images/icon/icon.ico" type="image/x-icon" />
+    <link rel="icon" href="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/icon/icon.ico" type="image/x-icon" />
 
     <!-- homescreen web icon-name & hide safari ui -->    
-    <link rel="apple-touch-icon" href="images/icon/icon.ico">  
+    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/icon/icon.ico">  
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="menaca.cf">
     
@@ -20,7 +20,7 @@
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i|Inter:100,200,300,400,500,600,700,800,900">
     <meta property="og:title" content="MeNaCa Software">
     <meta property="og:description" content="MeNaCa Website. Mobile Apps and more...">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/icon/icon.ico">
     <meta property="og:url" content="http://menaca.cf/">
     <link rel="canonical" href="menaca.cf">
   </head>
