--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-align-left-xs u-custom-font u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://project.menaca.cf">Projects</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://brand.menaca.cf/?i=1">Gallery</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://www.instagram.com/menapps" target="_blank">MENAPPS</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link">Docs</a>
 </li></ul>
               </div>
