--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-grey-5 u-text-hover-custom-color-3" href="http://project.menaca.cf" style="padding: 10px 20px;">Projects</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-grey-5 u-text-hover-custom-color-3" href="http://brand.menaca.cf/?i=1" style="padding: 10px 20px;">Gallery</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-grey-5 u-text-hover-custom-color-3" href="https://www.instagram.com/menapps" target="_blank" style="padding: 10px 20px;">MENAPPS</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-grey-5 u-text-hover-custom-color-3" href="http://docs.menaca.cf/?i=1" style="padding: 10px 20px;">Docs</a>
 </li></ul>
           </div>
